--- a/_config.yml
+++ b/_config.yml
@@ -18,15 +18,15 @@ avatar: https://githubusercontent.com/u/12588169?v=3&s=460
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
-  facebook:
+  email: adamrob01@gmail.com
+  facebook: adamswim
   flickr:
-  github: barryclark/jekyll-now
+  github: adamswim
   instagram:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
-  twitter: jekyllrb
+  twitter: brandfission
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
