--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Adam Robinson
 description: A Lost Marketer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://githubusercontent.com/u/12588169?v=3&s=460
+avatar: https://avatars3.githubusercontent.com/u/12588169?v=3&s=460
 
 #
 # Flags below are optional
@@ -19,9 +19,9 @@ avatar: https://githubusercontent.com/u/12588169?v=3&s=460
 footer-links:
   dribbble:
   email: adamrob01@gmail.com
-  facebook: adamswim
+  facebook: /adamswim
   flickr:
-  github: adamswim
+  github: /adamswim
   instagram:
   linkedin:
   pinterest:
