--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,9 @@ avatar: https://avatars3.githubusercontent.com/u/12588169?v=3&s=460
 footer-links:
   dribbble:
   email: adamrob01@gmail.com
-  facebook: /adamswim
+  facebook: adamswim
   flickr:
-  github: /adamswim
+  github: adamswim
   instagram:
   linkedin:
   pinterest:
