--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Adam Robinson
 description: A Lost Marketer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: http://tinypic.com/r/2m3o3k3/8
+avatar: http://i57.tinypic.com/2m3o3k3.jpg
 
 #
 # Flags below are optional
