--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Adam Robinson
+name: No code Viable Product
 
 # Short bio or description (displayed in the header)
-description: A Lost Marketer
+description: A new methodology for idea creation
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: http://i61.tinypic.com/2rdj486.jpg
